# trustformers

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .typos.toml  .yamllint.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SCIRS2_INTEGRATION_POLICY.md  TODO.md  clippy.toml  deny.toml  publish_one.sh  regression_config.json  rustfmt.toml  test_metal_direct.rs
examples/grpc-server/: Cargo.toml  Dockerfile  README.md  build.rs  client.py  docker-compose.yml
examples/server/: Cargo.toml  Dockerfile  README.md  client.py  docker-compose.yml
trustformers-c/: Cargo.toml  ENHANCED_API_DOCUMENTATION.md  Makefile  README.md  TODO.md  build-universal.sh  build-wasm.sh  build-windows.bat  build.rs  cbindgen.toml  clippy.toml
trustformers-c/csharp/: README.md  TrustformeRS.csproj
trustformers-c/docs/: API_REFERENCE.md
trustformers-c/examples/: advanced_pipeline.c  basic_usage.c  chatbot_service.c  debug_utilities_demo.c  profiling_benchmark_demo.c  sentiment_analysis_service.c  translation_service.c
trustformers-c/golang/: README.md  go.mod
trustformers-c/java/: README.md  build.gradle  pom.xml
trustformers-c/nodejs/: README.md  package.json  tsconfig.json
trustformers-c/proto/: trustformers.proto
trustformers-c/python/: setup.py
trustformers-c/scripts/: asan_test.sh  memory_test.sh  test-automation.py  test-runner.bat  test-runner.sh  valgrind.supp  valgrind_test.sh
trustformers-c/src/: abi_stability.rs  asic.rs  async_api.rs  batch_processor.rs  cuda.rs  distributed.rs  error.rs  fuzzing.rs  grpc_server.rs  http_server.rs  intel_ai.rs  lib.rs  memory_pool.rs  memory_safety.rs  memory_safety_enhanced.rs  metal.rs  modern_architectures.rs  multimodal.rs  performance.rs  performance_analytics.rs  pipeline.rs  plugin.rs  profiling_tools.rs  streaming.rs  tensor.rs  tests.rs  thread_pool.rs  tpu.rs  utils.rs  zero_copy.rs
trustformers-c/tests/: integration_tests.rs.disabled  performance_regression_tests.rs.disabled  property_based_tests.rs.disabled
trustformers-core/: Cargo.toml  README.md  TODO.md
trustformers-core/.kernel_cache/: kernel_cache_0_Generic CPU.json
trustformers-core/benches/: hardware_acceleration.rs  tensor_operations.rs
trustformers-core/examples/: advanced_quantization_demo.rs  benchmark_mps_integration.rs  enhanced_errors_demo.rs  model_compression_demo.rs
trustformers-core/src/: adaptive_computation.rs  blas.rs  device.rs  error.rs  error_tests.rs  gpu.rs  gpu_accelerated.rs  hardware_acceleration.rs  interpretability.rs  kernel_tuning.rs  lib.rs  memory.rs  numa_optimization.rs  peft.rs  sparse_ops.rs  sparse_tensor.rs  tensor_debugger.rs  tokenizer_backend.rs  traits.rs  traits_tests.rs
trustformers-core/tests/: comprehensive_property_tests.proptest-regressions  comprehensive_property_tests.rs  hardware_specific_tests.rs  layers_property_tests.proptest-regressions  layers_property_tests.rs  property_tests.rs  test_device_linear.rs
trustformers-debug/: Cargo.toml  README.md  TODO.md
trustformers-debug/examples/: advanced_debugging_demo.rs  cross_module_integration_demo.rs  debug_session_demo.rs  distributed_profiling_demo.rs  llm_debugging_demo.rs  mlflow_integration_demo.rs  neural_network_debugging_demo.rs  performance_tuning_demo.rs  visualization_demo.rs  visualization_plugins_demo.rs
trustformers-debug/modern_debug_plots/: line_plot_1753541223.html  line_plot_1753868703.html  scatter_plot_1753578651.html  scatter_plot_1753790438.html
trustformers-debug/src/: activation_visualizer.rs  advanced_gpu_profiler.rs  advanced_gpu_profiler_tests.rs  advanced_ml_debugging.rs  ai_code_analyzer.rs  ai_code_analyzer_tests.rs  anomaly_detector.rs  architecture_analysis.rs  attention_visualizer.rs  auto_debugger.rs  auto_debugger_tests.rs  behavior_analysis.rs  behavior_analysis_tests.rs  cicd_integration.rs  collaboration.rs  computation_graph.rs  dashboard.rs  data_export.rs  differential_debugging.rs  differential_debugging_tests.rs  distributed_profiling.rs  error_recovery.rs  flame_graph_profiler.rs  flame_graph_profiler_tests.rs  graph_visualizer.rs  health_checker.rs  health_checker_tests.rs  hooks.rs  ide_integration.rs  ide_integration_tests.rs  interactive_debugger.rs  interpretability_tools.rs  kernel_optimizer.rs  kernel_optimizer_tests.rs  large_model_viz.rs  lib.rs  llm_debugging.rs  llm_debugging_tests.rs  memory_profiler.rs  mlflow_integration.rs  (+24 more)
trustformers-debug/tests/: integration_tests.rs
trustformers-mobile/: .gitignore  Cargo.toml  JITPACK.md  ON_DEVICE_TRAINING.md  OPTIMIZATION_GUIDE.md  PLATFORM_APIS.md  README.md  TODO.md  build-android.sh  build-ios.sh  jitpack.yml
trustformers-mobile/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
trustformers-mobile/android-lib/: IMPLEMENTATION_SUMMARY.md  README.md  build.gradle  consumer-rules.pro  gradlew.bat  proguard-rules.pro
trustformers-mobile/codegen/: FEATURES.md  README.md  codegen_framework.py  generate.py
trustformers-mobile/csharp-wrapper/: MobileConfig.cs  MobileInferenceEngine.cs  README.md  TrustformersMobile.cs  TrustformersMobile.csproj  TrustformersMobileException.cs
trustformers-mobile/src/: battery.rs  (+61 more)
trustformers-models/: Cargo.toml  README.md  TODO.md
trustformers-optim/: Cargo.toml  README.md  TODO.md
trustformers-py/: Cargo.toml  LICENSE  TODO.md  mobile_package_management.py  package_config.toml  pyproject.toml
trustformers-serve/: .docker-buildkit.toml  .dockerignore  Cargo.toml  Dockerfile  Dockerfile.optimized  Dockerfile.super-optimized  Makefile  README.Docker.md  README.md  README_LOAD_TESTING.md  TEST_TIMEOUT_OPTIMIZATION.md  TODO.md  build.rs  docker-compose.production.yml  docker-compose.yml  nginx.conf
trustformers-tokenizers/: Cargo.toml  README.md  README_PYTHON.md  TODO.md  debug_similarity  debug_vocab_test  pyproject.toml
trustformers-training/: Cargo.toml  README.md  TODO.md
trustformers-wasm/: Cargo.toml  README.md  TODO.md  build.sh  optimize.sh  playground.html  security_audit.sh  svelte-package.json
(+3344 files in other folders)
