# =============================================================================
# LEGACY CRATE - NOT ACTIVELY MAINTAINED
# =============================================================================
# This crate is kept for historical reference only.
# It is excluded from the workspace and should NOT be published or built.
# For C API bindings, consider using trustformers-core directly.
# =============================================================================

[package]
name = "trustformers-c"
version = "0.1.0-alpha.2"
edition = "2021"
rust-version = "1.75"
authors = ["TrustformeRS cool-japan Team (Team KitaSan)"]
license = "MIT OR Apache-2.0"
description = "C API for TrustformeRS - High-performance transformer library (LEGACY - NOT MAINTAINED)"
repository = "https://github.com/cool-japan/trustformers"
homepage = "https://github.com/cool-japan/trustformers"
documentation = "https://docs.rs/trustformers-c"
readme = "README.md"
keywords = ["transformers", "nlp", "ffi", "c-api", "language-bindings"]
categories = ["api-bindings", "science", "wasm"]
publish = false  # Do not publish this legacy crate

[lib]
name = "trustformers_c"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["tokenizers", "models", "pipelines"]
# Core features
tokenizers = ["trustformers-tokenizers"]
models = ["trustformers-models"]
pipelines = []
serving = ["trustformers-serve"]
training = ["trustformers-training"]
# Platform features
gpu = ["cuda"]
cuda = ["trustformers-core/cuda", "cudarc", "half"]
rocm = ["trustformers-core/rocm"]
torch = ["trustformers-core/torch"]
candle = ["trustformers-core/candle"]
# Cross-platform optimizations
arm64 = []
apple-silicon = ["arm64"]
windows-dll = []
universal-binary = []
simd = []
# WebAssembly features
wasm = ["wasm-bindgen"]
wasm-simd = ["wasm", "simd"]
wasm-threads = ["wasm"]
# Debug features
debug = ["trustformers-debug"]
profiling = []
# Code generation features
codegen = ["syn", "quote", "clap", "toml"]

[dependencies]
# Internal dependencies - use path references for legacy compatibility
trustformers = { version = "0.1.0-alpha.2", path = "../trustformers", default-features = false, features = ["bert", "gpt2"] }
trustformers-core = { version = "0.1.0-alpha.2", path = "../trustformers-core", default-features = false }
trustformers-tokenizers = { version = "0.1.0-alpha.2", path = "../trustformers-tokenizers", optional = true, default-features = false }
trustformers-models = { version = "0.1.0-alpha.2", path = "../trustformers-models", optional = true, default-features = false }
trustformers-serve = { version = "0.1.0-alpha.2", path = "../trustformers-serve", optional = true, default-features = false }
trustformers-training = { version = "0.1.0-alpha.2", path = "../trustformers-training", optional = true, default-features = false }
trustformers-debug = { version = "0.1.0-alpha.2", path = "../trustformers-debug", optional = true, default-features = false }

# Async dependencies
futures = "0.3"
tokio = { version = "1.49", features = ["full"] }

# Core dependencies
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"

# Memory management
once_cell = "1.21"
parking_lot = "0.12"
num_cpus = "1.17"
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"
dashmap = "6.1"
crossbeam-skiplist = "0.1"

# CUDA support (optional)
half = { version = "2.4", optional = true, features = ["serde"] }

# Code generation dependencies (optional)
syn = { version = "2.0", optional = true, features = ["full"] }
quote = { version = "1.0", optional = true }
clap = { version = "4.5", optional = true, features = ["derive"] }
toml = { version = "0.9", optional = true }

# HTTP server support
chrono = { version = "0.4", features = ["serde"] }

# SciRS2 Integration
scirs2-core = "0.1"

# Standards framework dependencies
regex = "1.12"
lazy_static = "1.5"
serde_yaml = "0.9"

# WebAssembly support
wasm-bindgen = { version = "0.2", optional = true }

[build-dependencies]
cbindgen = "0.29"
cc = "1.2"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.24"
quickcheck = "1.0"
quickcheck_macros = "1.1"
chrono = { version = "0.4", features = ["serde"] }

[package.metadata.docs.rs]
features = ["tokenizers", "models", "pipelines", "serving", "training", "debug"]
rustdoc-args = ["--cfg", "docsrs"]

# Platform-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winnt", "processenv", "handleapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"

# CUDA is only supported on Linux and Windows (not macOS)
[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
cudarc = { version = "0.17", optional = true, features = ["cublas", "curand"] }
