[package]
name = "trustformers-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits and utilities for TrustformeRS"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
tracing.workspace = true
log.workspace = true
# SciRS2 Integration Policy - using scirs2-core for all scientific computing
# Direct ndarray, rand, rand_distr, rayon dependencies removed per SciRS2 Policy
# Use scirs2_core::ndarray, scirs2_core::random, scirs2_core::parallel_ops instead
num-traits.workspace = true  # Still needed for trait bounds
# num-complex removed - use scirs2_core::Complex instead
half.workspace = true
oxicode.workspace = true
safetensors.workspace = true
byteorder.workspace = true
chrono.workspace = true
uuid.workspace = true
regex.workspace = true
lazy_static.workspace = true
dashmap.workspace = true
zstd.workspace = true
parking_lot.workspace = true
once_cell.workspace = true
async-trait.workspace = true
tokio.workspace = true
sha2.workspace = true
reqwest.workspace = true
num_cpus.workspace = true
approx.workspace = true
tempfile.workspace = true
tokenizers.workspace = true  # Re-exported for trustformers-tokenizers per SciRS2 Integration Policy

# SciRS2 dependencies - required for SciRS2 Integration Policy
# Includes: array ops (ndarray), random (rand/rand_distr), parallel (rayon), simd, complex numbers
# Note: ndarray support provided by scirs2-core
# Note: linalg feature is optional to support Python bindings (ndarray-linalg requires ndarray 0.17)
# Note: GPU backends (metal, cuda, opencl, wgpu) should be enabled via scirs2-core for policy compliance
scirs2-core = { workspace = true, features = ["array", "random", "parallel", "simd", "gpu"] }

# Optional backends
tch = { workspace = true, optional = true }
candle-core = { workspace = true, optional = true }

# MPI for multi-node communication (optional - only needed for multi-node training)
# Disable default features to avoid libffi-sys build issues on macOS ARM64
mpi = { version = "0.8", optional = true, default-features = false }

# Hardware acceleration backends
vulkano = { workspace = true, optional = true }
vulkano-shaders = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
# Metal-specific dependencies moved to target-specific section for macOS only

# WebGPU backend (cross-platform)
wgpu = { version = "27.0", optional = true }
pollster = { version = "0.4", optional = true }

# OpenCL backend (universal GPU support)
opencl3 = { version = "0.10", optional = true }

# Dynamic loading for optional GPU backends (ROCm)
libloading = { workspace = true, optional = true }

[dev-dependencies]
rstest.workspace = true
approx.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
tempfile.workspace = true
criterion.workspace = true

[features]
default = ["linalg"]
linalg = ["scirs2-core/linalg"]  # Linear algebra operations
torch = ["dep:tch"]
candle = ["dep:candle-core"]
parallel = []
mpi = ["dep:mpi"]
cuda = ["dep:cudarc"]
rocm = ["dep:libloading"]
intel = []
llvm = []
cranelift = []
vulkan = ["dep:vulkano", "dep:vulkano-shaders", "dep:bytemuck"]
# Note: cblas-sys and blas-src are now always included on macOS for CPU BLAS acceleration
metal = ["dep:metal", "dep:mpsgraph", "dep:objc2", "dep:objc2-metal"]
wgpu_backend = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]
opencl = ["dep:opencl3"]
xla = []
tpu = []
oneapi = []
riscv = []
nccl = []
backtrace = []

[[bench]]
name = "tensor_operations"
harness = false

[[bench]]
name = "hardware_acceleration"
harness = false

[[bin]]
name = "naming_checker"
path = "src/bin/naming_checker.rs"

# Platform-specific dependencies
# CUDA is only supported on Linux and Windows (not macOS)
[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
cudarc = { version = "0.17", optional = true, features = ["nvrtc", "cuda-12000"] }

# Metal is only supported on macOS
[target.'cfg(target_os = "macos")'.dependencies]
scirs2-core = { workspace = true, features = ["array", "random", "parallel", "simd", "gpu", "metal", "mpsgraph"] }
metal = { version = "0.32", optional = true }
mpsgraph = { version = "0.2", optional = true }
objc2 = { version = "0.6", optional = true }
objc2-metal = { version = "0.3", optional = true }
# Direct BLAS for maximum CPU performance via Accelerate framework
cblas-sys = { workspace = true }
blas-src = { workspace = true, features = ["accelerate"] }
