[package]
name = "trustformers-mobile"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Mobile deployment support for TrustformeRS (iOS, Android)"

[lints]
workspace = true

[dependencies]
trustformers-core.workspace = true
trustformers-models.workspace = true
trustformers-tokenizers.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
sha2.workspace = true
hex.workspace = true

# SciRS2 Policy: Using SciRS2-Core instead of ndarray/rand
scirs2-core = { workspace = true }
scirs2-linalg.workspace = true
fastrand.workspace = true

# Mobile-specific optimizations
half.workspace = true # for fp16 inference

# Benchmarking and profiling
num_cpus.workspace = true
chrono.workspace = true

# System-level APIs
libc = "0.2.180"

# CLI tools
clap.workspace = true
once_cell.workspace = true
async-trait.workspace = true

[[bin]]
name = "abi-checker"
path = "src/bin/abi-checker.rs"

# iOS specific dependencies (conditional compilation)
[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2.7"
core-foundation = "0.10.1"
core-foundation-sys = "0.8.7"
metal = "0.33.0"
cocoa = "0.26.1"

# Android specific dependencies (conditional compilation)
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
android_logger = "0.15.1"

# WebAssembly specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
web-sys = { version = "0.3.85", features = [
    "console",
    "Window",
    "Performance",
    "Navigator",
    "WorkerGlobalScope",
    "Worker",
] }
js-sys = "0.3.85"
console_error_panic_hook = "0.1.7"

[dev-dependencies]
rstest.workspace = true
approx.workspace = true

[features]
default = ["mobile-optimized"]
mobile-optimized = []
ios = []
android = []
coreml = []
nnapi = []
tflite-nnapi = ["nnapi"]
on-device-training = []
web = []
react-native = []
flutter = []
unity = []
expo = ["react-native"]

[lib]
name = "trustformers_mobile"
crate-type = ["staticlib", "cdylib", "rlib"]

# iOS specific build configuration
[[bin]]
name = "trustformers-profiler"
path = "src/bin/trustformers-profiler.rs"

[package.metadata.ios]
deployment_target = "12.0"
