[package]
name = "trustformers-optim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Optimizers for TrustformeRS"

[lints]
workspace = true

[dependencies]
trustformers-core.workspace = true
# Note: ndarray version controlled by trustformers-core feature (ndarray17 by default, ndarray16-compat for Python)
scirs2-core = { workspace = true, features = ["parallel"] }
num-traits.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
anyhow.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
num_cpus.workspace = true

[dev-dependencies]
rstest.workspace = true
approx.workspace = true

[features]
default = []

[[bench]]
name = "optimizer_benchmark"
harness = false